; ModuleID = '/home/carl/AnghaBench/mpv/options/extr_m_option.c_get_choice.c'
source_filename = "/home/carl/AnghaBench/mpv/options/extr_m_option.c_get_choice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_opt_choice_alternatives = type { i32, i64 }
%struct.TYPE_3__ = type { i32, i32, i32, %struct.m_opt_choice_alternatives* }

@M_OPT_MIN = common dso_local global i32 0, align 4
@M_OPT_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.m_opt_choice_alternatives* (%struct.TYPE_3__*, i8*, i32*)* @get_choice to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.m_opt_choice_alternatives* @get_choice(%struct.TYPE_3__* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.m_opt_choice_alternatives*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.m_opt_choice_alternatives*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to i32*
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %8, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 3
  %15 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %14, align 8
  store %struct.m_opt_choice_alternatives* %15, %struct.m_opt_choice_alternatives** %9, align 8
  br label %16

16:                                               ; preds = %30, %3
  %17 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %9, align 8
  %18 = getelementptr inbounds %struct.m_opt_choice_alternatives, %struct.m_opt_choice_alternatives* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %33

21:                                               ; preds = %16
  %22 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %9, align 8
  %23 = getelementptr inbounds %struct.m_opt_choice_alternatives, %struct.m_opt_choice_alternatives* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = load i32, i32* %8, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %9, align 8
  store %struct.m_opt_choice_alternatives* %28, %struct.m_opt_choice_alternatives** %4, align 8
  br label %65

29:                                               ; preds = %21
  br label %30

30:                                               ; preds = %29
  %31 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %9, align 8
  %32 = getelementptr inbounds %struct.m_opt_choice_alternatives, %struct.m_opt_choice_alternatives* %31, i32 1
  store %struct.m_opt_choice_alternatives* %32, %struct.m_opt_choice_alternatives** %9, align 8
  br label %16

33:                                               ; preds = %16
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* @M_OPT_MIN, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %63

40:                                               ; preds = %33
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = load i32, i32* @M_OPT_MAX, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %63

47:                                               ; preds = %40
  %48 = load i32, i32* %8, align 4
  %49 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 1
  %51 = load i32, i32* %50, align 4
  %52 = icmp sge i32 %48, %51
  br i1 %52, label %53, label %62

53:                                               ; preds = %47
  %54 = load i32, i32* %8, align 4
  %55 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %55, i32 0, i32 2
  %57 = load i32, i32* %56, align 8
  %58 = icmp sle i32 %54, %57
  br i1 %58, label %59, label %62

59:                                               ; preds = %53
  %60 = load i32, i32* %8, align 4
  %61 = load i32*, i32** %7, align 8
  store i32 %60, i32* %61, align 4
  store %struct.m_opt_choice_alternatives* null, %struct.m_opt_choice_alternatives** %4, align 8
  br label %65

62:                                               ; preds = %53, %47
  br label %63

63:                                               ; preds = %62, %40, %33
  %64 = call i32 (...) @abort() #2
  unreachable

65:                                               ; preds = %59, %27
  %66 = load %struct.m_opt_choice_alternatives*, %struct.m_opt_choice_alternatives** %4, align 8
  ret %struct.m_opt_choice_alternatives* %66
}

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
